# react-native-uws

./: .gitignore  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json
.github/workflows/: release.yaml
example/: app.config.ts  metro.config.js  package.json  react-native.config.js  tsconfig.json
example/src/app/: _layout.tsx  index.tsx
package/: ReactNativeUws.podspec  UwsReactNative.podspec  package.json  react-native.config.js  tsconfig.json
package-builder/: bob.config.js  package.json
package-builder/scripts/: _prepack.mjs  _uws-mod.mjs  bin.mjs
package-builder/scripts/_bob/: _prepack.mjs  index.mjs
package/android/: build.gradle.kts
package/cpp/: CMakeLists.txt  ReactNativeUwsModule.cpp  ReactNativeUwsModule.h  RequestHostObject.cpp  RequestHostObject.h  UwsReactNativeModule.cpp
package/cpp/app/: AppHost.h  AppRunner.h  AppWrapper.h  CMakeLists.txt  HttpRequestObject.h  HttpResponseObject.h  HttpResponseObjectProvider.h  TemplatedAppObject.h
package/cpp/jsi/: Buffer.h  CMakeLists.txt
package/src/: index.ts
package/src/modules/: App.ts  CompressOptions.ts  EnvironmentVariables.ts  ListenOptions.ts  SSLApp.ts  getParts.ts  index.ts  us_listen_socket_close.ts  us_socket_local_port.ts
package/src/types/: AppDescriptor.ts  AppOptions.ts  HttpRequest.ts  HttpResponse.ts  HttpRouterOptions.ts  MultipartField.ts  RecognizedString.ts  TemplatedApp.ts  WebSocket.ts  WebSocketBehaviour.ts  index.ts  us_listen_socket.ts  us_socket.ts  us_socket_context_t.ts
scripts/: release.mjs
(+2 files in other folders)
